--- a/index.html
+++ b/index.html
@@ -2,22 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 <header>
     <nav>
-
+        <h1>code213</h1>
+        <p></p>
     </nav>
 </header>
-<main>
+<main></main>
 
-</main>
-
-<body>
-
-</body>
+<body></body>
 
 </html>
