--- a/index.html
+++ b/index.html
@@ -20,79 +20,83 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <header>
-    <nav>
-      <div class="nav-title">
-        <img class="ico-nav" src="asset/sygnet@2x.png" alt="" />
-        <h1>Docplaner <span>Group</span></h1>
-      </div>
 
-      <div>
-        <ul class="nav-l">
-          <li>About us</li>
-          <li>Career</li>
-          <li>Departement</li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
-    <main>
-      <section>
-        <div class="first-title-main">
-          <img src="asset/sygnet@2x.png" alt="" />
-          <h1>Helping people live longer, healthier lives</h1>
-        </div>
-      </section>
-      <section>
-        <div class="welcome">
-          <p>
-            Docplanner is creating a healthcare ecosystem that seamlessly
-            connects patients with doctors while integrating smart tools to
-            provide quicker, more precise diagnoses and treatments, with the
-            goal of supporting 1 billion patient visits annually within the next
-            decade.
-          </p>
-          <p>
-            We also help doctors to better manage their practice and build their
-            online reputation. With our integrated end-to-end solution, doctors
-            are able not only to improve their online presence, but also to
-            devote their time to what really matters: their patients. Please
-            check the
-            <a href="">2025 Docplanner Trust and Transparency Report</a>
-          </p>
-        </div>
-      </section>
-      <section class="cards">
-        <div class="card1">
-          <i class="fa-solid fa-hospital-user"></i>
-          <h2>For patients</h2>
-          <h3>
-            Find a doctor, book a visit and solve any health-related doubt
-          </h3>
-          <p>Choose country <i class="fa-solid fa-chevron-down"></i></p>
+  <body>
+    <header>
+      <nav>
+        <div class="nav-title">
+          <img class="ico-nav" src="asset/sygnet@2x.png" alt="" />
+          <h1>Docplaner <span>Group</span></h1>
         </div>
 
-        <div class="card2">
-          <i class="fa-solid fa-user-doctor"></i>
-          <h2>For doctors</h2>
-          <h3>
-            Find a doctor, book a visit and solve any health-related doubt
-          </h3>
-          <p>Choose country <i class="fa-solid fa-chevron-down"></i></p>
+        <div>
+          <ul class="nav-l">
+            <li>About us</li>
+            <li>Career</li>
+            <li>Departement</li>
+          </ul>
         </div>
+      </nav>
+    </header>
+    <div class="container">
+      <main>
+        <section>
+          <div class="first-title-main">
+            <img src="asset/sygnet@2x.png" alt="" />
+            <h1>Helping people live longer, healthier lives</h1>
+          </div>
+        </section>
+        <section>
+          <div class="welcome">
+            <p>
+              Docplanner is creating a healthcare ecosystem that seamlessly
+              connects patients with doctors while integrating smart tools to
+              provide quicker, more precise diagnoses and treatments, with the
+              goal of supporting 1 billion patient visits annually within the
+              next decade.
+            </p>
+            <p>
+              We also help doctors to better manage their practice and build
+              their online reputation. With our integrated end-to-end solution,
+              doctors are able not only to improve their online presence, but
+              also to devote their time to what really matters: their patients.
+              Please check the
+              <a href="">2025 Docplanner Trust and Transparency Report</a>
+            </p>
+          </div>
+        </section>
+        <section class="cards">
+          <div class="card1">
+            <i class="fa-solid fa-hospital-user"></i>
+            <h2>For patients</h2>
+            <h3>
+              Find a doctor, book a visit and solve any health-related doubt
+            </h3>
+            <p>Choose country <i class="fa-solid fa-chevron-down"></i></p>
+          </div>
 
-        <div class="card3">
-          <i class="fa-solid fa-hospital-user"></i>
-          <h2>For patients</h2>
-          <h3>
-            Find a doctor, book a visit and solve any health-related doubt
-          </h3>
-          <p>Choose country</p>
-        </div>
-      </section>
-    </main>
+          <div class="card2">
+            <i class="fa-solid fa-user-doctor"></i>
+            <h2>For doctors</h2>
+            <h3>Save time managing visits and cut no-shows by half</h3>
+            <p>Choose country <i class="fa-solid fa-chevron-down"></i></p>
+          </div>
 
-
-  <body></body>
+          <div class="card3">
+            <i class="fa-solid fa-building"></i>
+            <h2>For clinics</h2>
+            <h3>Deliver an exceptional patient experience in your clinic</h3>
+            <p>Choose your option <i class="fa-solid fa-chevron-down"></i></p>
+          </div>
+        </section>
+        <section class="icons-section">
+          <div class="wep">
+            <h2>We are a global</h2>
+            <h2>company</h2>
+            <h2>with local culture</h2>
+          </div>
+        </section>
+      </main>
+    </div>
+  </body>
 </html>
