logo in secon section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -29,16 +35,16 @@
           <h1>Docplaner <span>Group</span></h1>
         </div>
 
-        <div>
-          <ul class="nav-l">
-            <li>About us</li>
-            <li>Career</li>
-            <li>Departement</li>
+        <div class="nav-l">
+          <ul>
+            <li><a href="" class="first-li">About us</a></li>
+            <li><a href="">Career</a></li>
+            <li><a href="">Departement</a></li>
           </ul>
         </div>
       </nav>
     </header>
-    <div class="container">
+    <div class="container1">
       <main>
         <section>
           <div class="first-title-main">
@@ -95,7 +101,104 @@
             <h2>company</h2>
             <h2>with local culture</h2>
           </div>
+          <div class="icons-title-one">
+            <div class="icons-doc">
+              <div class="ico-doc">
+                <img src="asset/sygnet@0.5x-g.png" alt="" />
+                <h2>ZnanyLekarz</h2>
+              </div>
+            </div>
+            <div class="icons-doc">
+              <div class="ico-doc">
+                <img src="asset/sygnet@0.5x-g.png" alt="" />
+                <h2>Doctoralia</h2>
+              </div>
+            </div>
+            <div class="icons-doc">
+              <div class="ico-doc">
+                <img src="asset/sygnet@0.5x-g.png" alt="" />
+                <h2>ZnanyLekarz</h2>
+              </div>
+            </div>
+            <div class="icons-doc">
+              <div class="ico-doc">
+                <img src="asset/sygnet@0.5x-g.png" alt="" />
+                <h2>MioDottore</h2>
+              </div>
+            </div>
+            <div class="icons-doc">
+              <div class="ico-doc">
+                <img src="asset/sygnet@0.5x-g.png" alt="" />
+                <h2>DoktorTakvimi</h2>
+              </div>
+            </div>
+            <div class="icons-doc">
+              <div class="ico-doc">
+                <img src="asset/sygnet@0.5x-g.png" alt="" />
+                <h2>ZanmyLekar</h2>
+              </div>
+            </div>
+            <div class="icons-doc">
+              <div class="ico-doc">
+                <img src="asset/sygnet@0.5x-g.png" alt="" />
+                <h2>jameda</h2>
+              </div>
+            </div>
+            <div class="icons-doc">
+              <div class="ico-doc">
+                <a href=""
+                  ><img class="logoimg" src="asset/logo-clinicloud.svg" alt=""
+                /></a>
+              </div>
+            </div>
+            <div class="icons-doc">
+              <div class="ico-doc2">
+                <a href=""
+                  ><img class="logoimg" src="asset/logo-feegow.svg" alt=""
+                /></a>
+              </div>
+            </div>
+            <div class="icons-doc">
+              <div class="ico-doc">
+                <a href=""
+                  ><img
+                    class="logoimg"
+                    src="asset/logo-gipo-primary.svg"
+                    alt=""
+                /></a>
+              </div>
+            </div>
+            <div class="icons-doc">
+              <div class="ico-doc">
+                <a href=""
+                  ><img class="logoimg" src="asset/logo-tuotempo.svg" alt=""
+                /></a>
+              </div>
+            </div>
+            <div class="icons-doc">
+              <div class="ico-doc">
+                <a href=""
+                  ><img class="logoimg" src="asset/my-dr-edm-logo.svg" alt=""
+                /></a>
+              </div>
+            </div>
+          </div>
         </section>
+      </main>
+    </div>
+    <div class="container2">
+      <main>
+        <div class="first-div">
+          <h1>
+            The world's biggest <br />
+            healthcare platform
+          </h1>
+          <p>
+            We work from 11 offices all over the world, bringing Docplanner <br>
+            Group to life in 13 countries.
+          </p>
+          
+        </div>
       </main>
     </div>
   </body>
